# open-strike

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  package.json  pocket.json  tsconfig.json
assets/models/: CREDITS.md
crates/openstrike/: Cargo.toml
crates/openstrike-core/: Cargo.toml
crates/openstrike-core/src/: bot.rs  lib.rs  sim.rs  weapon.rs
crates/openstrike-psp/: Cargo.toml  Psp.toml  build.rs
crates/openstrike-psp/src/: input.rs  main.rs  maps.rs  present.rs  strike.rs
crates/openstrike-vita/: Cargo.toml  README.md  build.rs
crates/openstrike-vita/src/: capture.rs  frame_dump.rs  input.rs  lib.rs  main.rs  map_data.rs  present_data.rs  sim_boot.rs
crates/openstrike/src/: args.rs  bot.rs  game.rs  guest.rs  main.rs  scripts.rs  weapon.rs
game/: hud.tsx  menu.tsx  openstrike.tsx  rules.ts  sdk.ts
scripts/: build-ui.ts  e2e-psp.ts  e2e-vita.ts  gen-cover.ts  hw.ts  pocket-contract.ts  psp.ts  vita.ts
test/: openstrike-vita-artwork.test.ts  psp-toolchain.test.ts
