# openstrike-psp — OpenStrike on a real Sony PSP.
#
# STANDALONE LONE-BIN CRATE (excluded from the workspace; cargo-psp only).
# Build + run: `bun scripts/psp.ts` from the repo root.
#
# The composition (RUNTIMES.md): openstrike-core (the FPS simulation) +
# pocket3d-gu (the sceGu world renderer over a cooked .p3d) + the pocketjs-psp
# host library (arena allocator, QuickJS embedding, `ui` surface, 2D DrawList
# GE backend, DevTools mailbox) + this crate's `strike` surface and frame
# loop. The same dist/pocket/psp/openstrike.{js,pak} bundle as desktop is
# embedded — the rules mod and JSX HUD run unmodified on the handheld.
#
# PocketJS and this host share exact organization-owned rust-psp / QuickJS
# revisions, so Cargo resolves one copy of each runtime crate.

[package]
name = "openstrike-psp"
version = "0.1.0"
edition = "2021"

[dependencies]
psp = { git = "https://github.com/pocket-stack/rust-psp.git", rev = "2cbaf8c9bc72569c76240a1d9743de10731e5f6b", features = ["external-c-heap", "abort-only", "external-global-alloc"] }
libquickjs-sys = { git = "https://github.com/pocket-stack/quickjs-rs.git", rev = "0fc946fb670c0c29bc0135f510bcb0f595415a61" }
pocketjs-psp = { path = "../../vendor/pocketjs/native" }
pocketjs-core = { path = "../../vendor/pocketjs/core" }
pocket3d-bsp = { path = "../../vendor/pocketjs/pocket3d/crates/pocket3d-bsp", default-features = false, features = ["libm"] }
pocket3d-gu = { path = "../../vendor/pocketjs/pocket3d/crates/pocket3d-gu" }
openstrike-core = { path = "../openstrike-core", default-features = false, features = ["libm"] }
glam = { version = "0.33", default-features = false, features = ["libm"] }
libm = "0.2"

[features]
# Deterministic frame-dump build for scripts/e2e-psp.ts (PPSSPPHeadless).
capture = []
# Rolling frame-time windows to host0:/OpenStrike-bench.jsonl (hardware).
bench = []
