[package]
name = "openstrike"
description = "OpenStrike: a single-player CS-like FPS on the Pocket runtime family — Pocket3D core, QuickJS gameplay mods, Solid JSX HUD"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pocket3d = { workspace = true, features = ["bsp"] }
pocket-mod = { workspace = true }
pocket-ui-wgpu = { workspace = true }
pocketjs-core = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
